--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -185,9 +185,15 @@
 }
 
 .portfolio .modal_content .h2TitreModal {
-	font-size: 30px!important;
+	font-size: 30px !important;
 	padding-top: 10px;
 	text-transform: capitalize;
+}
+
+@media screen and (max-width:574px) {
+	body .portfolio .modal_content .h2TitreModal {
+		font-size: 30px !important;
+	}
 }
 
 .miniatureModal {
@@ -336,8 +342,8 @@
 	opacity: 0.8;
 }
 
-.portfolio i{
-	cursor:pointer;
+.portfolio i {
+	cursor: pointer;
 }
 
 .portfolio.cliquable {
@@ -769,9 +775,7 @@
 	}
 }
 
-@media screen and (max-width: 360px) {
-
-}
+@media screen and (max-width: 360px) {}
 
 @media screen and (max-width: 614px) {
 	body .portfolio .modal_content {
